- make sure the rally iframe doesn't expand outside its container on mobile and tablet

--- a/wp-content/themes/nationswell/scss/partials/base/_story.scss
+++ b/wp-content/themes/nationswell/scss/partials/base/_story.scss
@@ -521,6 +521,11 @@
     height: auto;
   }
 
+  .take-action__rally {
+    width: auto;
+    max-width: 100%
+  }
+
   p {
     color: $ns_black;
   }
